--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -56,6 +56,8 @@ a code, a pre {
 }
 
 .submit {
-    background-color: #ccc;
+    background-color: #F7F784;
+    border: 1px solid #671d1d;
     font-weight: bold;
+    padding: 4px;
 }
