--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -59,5 +59,6 @@ a code, a pre {
     background-color: #F7F784;
     border: 1px solid #671d1d;
     font-weight: bold;
-    padding: 4px;
+    padding: 4px 10px;
+    color: #671d1d;
 }
